<?xml version="1.0"?>
<package>
  <name>laser3D</name>
  <version>1.0.0</version>
  <description>
    The laser3D metapackage
  </description>
  <maintainer email="dasanche@ing.uc3m.es"></maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
