<package>
  <name>laser_msgs</name>
  <description>blabla</description>
  <maintainer email="aa@uc3m.es">AA</maintainer>
  <version>0.0.1</version>
  <license>BSD</license>
  <author>A A</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend> 

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>
